// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaterialItem applies bg-aliceBlue for qty > max (overstock) 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="bg-aliceBlue p-2 border border-lightGreyMinimal rounded-sm"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="material-list-Material A"
>
  <View>
    <View
      className="flex-row gap-x-2"
    >
      <View
        className="flex-1 gap-y-0.5"
      >
        <Text
          className="font-mainMedium text-sm text-marine"
        >
          Material A
        </Text>
        <View
          className="flex-row justify-between items-center"
        >
          <Text
            className="text-mediumGray font-mainRegular text-xxs"
          >
            label.updated_at 01/06/2024 19:00
          </Text>
          <Text
            className="text-mediumGray font-mainRegular text-xxs"
          >
            label.available_stock: 
            <Text
              className="text-deepBlue font-mainBold text-xs"
            >
              #25
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`MaterialItem applies bg-mintGreen for qty >= min && qty <= max (normal stock) 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="bg-mintGreen p-2 border border-lightGreyMinimal rounded-sm"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="material-list-Material A"
>
  <View>
    <View
      className="flex-row gap-x-2"
    >
      <View
        className="flex-1 gap-y-0.5"
      >
        <Text
          className="font-mainMedium text-sm text-marine"
        >
          Material A
        </Text>
        <View
          className="flex-row justify-between items-center"
        >
          <Text
            className="text-mediumGray font-mainRegular text-xxs"
          >
            label.updated_at 01/06/2024 19:00
          </Text>
          <Text
            className="text-mediumGray font-mainRegular text-xxs"
          >
            label.available_stock: 
            <Text
              className="text-greenPrimary font-mainBold text-xs"
            >
              #10
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`MaterialItem applies bg-softIvory for qty < min (low stock) 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="bg-softIvory p-2 border border-lightGreyMinimal rounded-sm"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="material-list-Material A"
>
  <View>
    <View
      className="flex-row gap-x-2"
    >
      <View
        className="flex-1 gap-y-0.5"
      >
        <Text
          className="font-mainMedium text-sm text-marine"
        >
          Material A
        </Text>
        <View
          className="flex-row justify-between items-center"
        >
          <Text
            className="text-mediumGray font-mainRegular text-xxs"
          >
            label.updated_at 01/06/2024 19:00
          </Text>
          <Text
            className="text-mediumGray font-mainRegular text-xxs"
          >
            label.available_stock: 
            <Text
              className="text-vividOrange font-mainBold text-xs"
            >
              #2
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`MaterialItem applies bg-softPink for qty === 0 (out of stock) 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="bg-softPink p-2 border border-lightGreyMinimal rounded-sm"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="material-list-Material A"
>
  <View>
    <View
      className="flex-row gap-x-2"
    >
      <View
        className="flex-1 gap-y-0.5"
      >
        <Text
          className="font-mainMedium text-sm text-marine"
        >
          Material A
        </Text>
        <View
          className="flex-row justify-between items-center"
        >
          <Text
            className="text-mediumGray font-mainRegular text-xxs"
          >
            label.updated_at 01/06/2024 19:00
          </Text>
          <Text
            className="text-mediumGray font-mainRegular text-xxs"
          >
            label.available_stock: 
            <Text
              className="text-lavaRed font-mainBold text-xs"
            >
              #0
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`MaterialItem applies bg-white for showQuantity is false 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="bg-white p-2 border border-lightGreyMinimal rounded-sm"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="material-list-Material A"
>
  <View>
    <View
      className="flex-row gap-x-2"
    >
      <View
        className="flex-1 gap-y-0.5"
      >
        <Text
          className="font-mainMedium text-sm text-marine"
        >
          Material A
        </Text>
        <View
          className="flex-row justify-between items-center"
        >
          <Text
            className="text-mediumGray font-mainRegular text-xxs"
          >
            label.updated_at 01/06/2024 19:00
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
